--- a/lacrei-front-end/package.json
+++ b/lacrei-front-end/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@next/font": "^14.2.12",
     "@types/styled-components": "^5.1.34",
     "next": "14.2.11",
